--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Yêu em ❤️</title>
+  <title>19th birthday ❤️</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -16,7 +16,7 @@
   
 <div class="paper image">
   <p> chài ơi</p>
-    <p>tui yêu em quá 😍 </p>
+    <p> hạnh phúc nha 😍 </p>
    <img src="images/1.jpg" />
 </div>
 
@@ -26,8 +26,8 @@
 </div>
 
 <div class="paper image">
-  <p>ngày nào cũng</p>
-   <p>nhớ Xưn Xàm❤️ </p>
+  <p>chị biết hăm?</p>
+   <p>chị đáng yêu lắm❤️ </p>
 
   <img src="images/3.jpg" />
 </div>
@@ -35,17 +35,17 @@
 
 
 <div class="paper red">
-<p class="p1"> tui muốn nắm tay em</p>
-<p class="p2">😍lâu nhất có thể</p>
+<p class="p1">tuổi 20</p>
+<p class="p2">😍luôn vui vẻ nha</p>
 </div>
 
 <div class="paper">
-<p class="p1">hmm tui thương em</p>
-  <p class="p1">nhiều lắm ớ <span style="color: red !important;">❤️</span></p>
+<p class="p1">chúc mừng</p>
+  <p class="p1">sinh nhật chị <span style="color: red !important;">❤️</span></p>
 </div>
 
 <div class="paper">
-<p class="p1">cục cưng à!</p>
+<p class="p1">chào chị xinh đẹp!</p>
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
